argocd/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/target-group-arn: "arn:aws:elasticloadbalancing:us-east-2:851725552187:targetgroup/argocd-tg/bf7f08d8ebe0504e"  
spec:
  rules:
    - host: argocd-alb-1454179871.us-east-2.elb.amazonaws.com  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
